--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "countup.js": "^2.1.0",
     "interactjs": "^1.10.11",
     "register-service-worker": "^1.7.1",
+    "three": "^0.138.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
