--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "animate.css": "^4.1.1",
-    "core-js": "^3.6.5",
+    "core-js": "^3.8.3",
     "countup.js": "^2.1.0",
     "filemanager-webpack-plugin": "^6.1.7",
     "interactjs": "^1.10.11",
-    "register-service-worker": "^1.7.1",
+    "register-service-worker": "^1.7.2",
     "three": "^0.138.3",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vue": "3.2.47",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.14",
-    "@vue/cli-plugin-pwa": "~4.5.14",
-    "@vue/cli-plugin-router": "~4.5.14",
-    "@vue/cli-plugin-vuex": "~4.5.14",
-    "@vue/cli-service": "~4.5.14",
-    "@vue/compiler-sfc": "^3.0.0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0",
+    "vue-template-compiler": "^2.6.14"
   }
 }
