--- a/package.json
+++ b/package.json
@@ -1,32 +1,50 @@
 {
   "name": "voila",
-  "version": "0.1.1",
+  "version": "1.0.0",
+  "dateModify": "2025-07-10",
+  "dateInit": "2022-03-17",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "animate.css": "^4.1.1",
-    "core-js": "^3.8.3",
-    "countup.js": "^2.1.0",
-    "filemanager-webpack-plugin": "^6.1.7",
-    "interactjs": "^1.10.11",
+    "@popperjs/core": "^2.11.8",
+    "@vuepic/vue-datepicker": "^3.3.1",
+    "axios": "1.8.2",
+    "countup.js": "^2.9.0",
+    "clipboard": "^2.0.11",
+    "core-js": "^3.26.1",
+    "echarts": "^5.4.3",
+    "floating-vue": "^2.0.0-beta.20",
+    "js-base64": "^3.7.5",
+    "js-calendar-converter": "^0.0.6",
+    "js-yaml": "^4.1.0",
+    "marked": "^4.2.4",
+    "pinia": "^2.1.7",
+    "three": "^0.178.0",
+    "interactjs": "^1.10.27",
+    "qiniu-js": "^3.4.1",
     "register-service-worker": "^1.7.2",
-    "three": "^0.138.3",
-    "vue": "3.2.47",
-    "vue-router": "^4.1.6",
-    "vuex": "^4.1.0"
+    "v-calendar": "^3.1.2",
+    "vue": "^3.4.3",
+    "vue-router": "^4.2.5",
+    "vuedraggable": "^4.1.0",
+    "dayjs": "^1.11.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-pwa": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "@types/js-yaml": "^4.0.9",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.69.6",
+    "sass-loader": "^13.3.2",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "vite-plugin-pwa": "^0.17.4",
+    "vite-plugin-zip-pack": "^1.0.7",
+    "vite-svg-loader": "^5.1.0",
+    "vue-tsc": "^1.8.5"
   }
 }
